# kandidattest

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
data/: local_questions.json  questions.json
docs/plans/: 2026-03-09-hybrid-provider-design.md  2026-03-09-hybrid-provider.md  2026-03-09-kandidattest-mvp.md  2026-03-09-results-page-design.md  2026-03-09-results-page-plan.md
public/: embedding_index.json  storkredse.json
scripts/: generate_embeddings.py  generate_embeddings_google.py  process_candidates.py  scrape_questions.py
src/: App.tsx  index.css  main.tsx
src/adapters/: ai-sdk-adapter.ts  api-adapter.ts  chat-model-adapter.ts  shared.ts
src/components/: CandidateCard.tsx  CandidateResults.tsx  ChoiceButtons.tsx  ProviderSelector.tsx  ResultsPage.tsx  StorkredsSelector.tsx
src/lib/: embeddings.ts  provider.ts  system-prompt.ts  webgpu.ts
src/workers/: embedding-worker.ts  llm-worker.ts
